swagger user (profile)
